correct responsive email renders

--- a/responsive-email.html
+++ b/responsive-email.html
@@ -1,282 +1,91 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name=viewport content="width=device-width, initial-scale=1">
-    <title>Email</title>
-  </head>
-  <body>
-    <style media="screen">
-    body {
-      margin: 0 auto;
-      background-color: #F0EEE6;
-    }
 
-    section:first-of-type {
-      padding-bottom: 6vh;
+<head>
+  <meta charset="utf-8">
+  <title>Email</title>
+</head>
 
-    }
-    section:first-of-type header {
-      color: #D1D0C9;
-      width: 90vw;
-      margin-left: 6.2vw;
-      text-align: center;
-      font-size: 3.5vw;
-      padding-top: 5vh;
-    }
+<body style="color: #342e1f; margin: 0 auto; background-color: #F0EEE6; padding-top: 5vh;">
+  <section style="margin-bottom: 14vh;">
+    <img style="width: 100%; font-size: 10%;" src="cid:bsllc@Header.jpg" alt="Header Image">
+    <div style="width: 70%; margin-left: 15%;" class="email-body">
+      <p style="font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace">Hi, xxxx,</p>
+      <p style="font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace">We received your inquiry, so this is just a holdover to say thanks for reaching out. We're not into the belabored formalities of never-ending email exchanges, so if you'd prefer to chat via phone, skype, or face-to-face over coffee, we're happy
+        to set up a time to discuss your brand's challenges. If that's the case, then respond to this email with dates and times that work for you and we will get a meeting on the books.</p>
+      <p style="font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace">If that's not your thing, we're happy to completely abandon our original statement and email back and forth until we fully understand the nature of your project.</p>
+      <p style="font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace">Above all, thank you for taking the time to check us out. We look forward to hopefully building something together that creates lasting impact and success.</p>
+      <p style="font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace">All the best,</p>
+      <p style="font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace">BS LLC</p>
+    </div>
+  </section>
 
-    section:first-of-type header span {
-      margin-right: 3.8vw;
-    }
+  <img style="width: 100%;" src="cid:bsllc@middle.jpg" alt="">
 
-    section:first-of-type img {
-      width: 10vw;
-      margin-left: 45vw;
-      padding-top: 4vh;
-    }
+  <section style="margin-bottom: 10vh;">
+    <p style="color: #54A3DA; margin-top: 7%; margin-bottom: 7%; font-style: italic; font-family: sans-serif; font-size: 13pt; margin-left: 12.5%" class="head">Jacob, Your Requested Work</p>
+    <div class="work-item" style="margin-left: 12.5%;">
+      <span style="font-family: 'Lato', sans-serif; font-weight: bold; font-size: 14pt;">Archive of Thirst</span>
+      <span style="display: block; margin-bottom: 5vh; font-family: 'Lato', sans-serif;">Rhinegeist Brewery</span>
+      <p style="width: 75%; font-family: 'Lato', sans-serif;">An award-winning campagin that helped Rhinegeist launch Cidergeist in two new markets. We connected with founders Bob Bonder and Bryant Goulding to distill Rhinegeist's culture into something their sales team could hold in their hands and make people
+        say wow.</p>
+      <a class="download-here" href="#" style="max-width: 40%; text-align: center; display: block; background-color: #54a3da; text-decoration: none; color: #F0EEE6; padding-top: 2%; padding-bottom: 2%; margin-top: 10%; margin-bottom: 15%; font-family: 'Lato', sans-serif;">Download Here</a>
+    </div>
+    <div class="work-item" style="margin-left: 12.5%;">
+      <span style="font-family: 'Lato', sans-serif; font-weight: bold; font-size: 14pt;">A Brand Aquatic</span>
+      <span style="display: block; margin-bottom: 5vh;font-family: 'Lato', sans-serif;">Eighth &amp; English</span>
+      <p style="width: 75%; font-family: 'Lato', sans-serif;">Chase B. cooked at the best restaurants in his city. He took over flailing kitches and turned them arounds. He quit the industry for five minutes and then came back because he missed the heat.</p>
+      <p style="width: 75%; font-family: 'Lato', sans-serif;">It was time for him to do him. It was time to open his own place. After taking over the lease to a built-out space, Chase asked us to build his brand. Together, we created Eighth &amp; English</p>
+      <a class="download-here" href="#" style="max-width: 40%; text-align: center; display: block; background-color: #54a3da; text-decoration: none; color: #F0EEE6; padding-top: 2%; padding-bottom: 2%; margin-top: 10%; margin-bottom: 15%; font-family: 'Lato', sans-serif;">Download Here</a>
+    </div>
+  </section>
 
-    section:first-of-type .sideways {
-      text-align: center;
-    }
-    section:first-of-type .sideways p {
-      background-color: #342D1F;
-      width: 38vw;
-      color: #F0EEE6;
-      padding-bottom: 1vh;
-      padding-top: 1vh;
-      position: absolute;
-      left: -15.2vw;
-      top: 24vh;
-      transform: rotate(90deg);
-      font-size: 3.5vw;
-    }
+  <div style="background-color: #dfded7; width: 100%; margin-top: 14%; padding-top: 10%;">
+    <span style="text-align: center; color: #f0eee6; font-size: 15pt; display: block; font-family: 'Lato', sans-serif;">BSLLC IS A CREATIVE CONSULTANCY</span>
+    <p style=" text-align: center; margin-left: 15%; color: #f0eee6; width: 70%; font-size: 9pt; font-family: 'Lato', sans-serif; margin-bottom: 5%;">focused on branding and marketing. We employ science and art, the cornerstones of effective and beautiful communication, to create meaningful solutions for brands.</p>
+    <div style="text-align: center;">
+      <span style="font-size: 12pt; font-family: 'Lato', sans-serif; font-weight: bold;"><a style="color: #969292 !important; text-decoration: none !important;" href="tel:(513)%20427-5526" value="+15134275526" target="_blank">CALL</a></span>
+      <span style="font-size: 12pt; margin-left: 10%; margin-right: 10%; font-family: 'Lato', sans-serif; font-weight: bold;"><a style="color: #969292 !important; text-decoration: none !important;" href="mailto:info.bsllc.biz" target="_blank">EMAIL</a></span>
+      <span style="font-size: 12pt; font-family: 'Lato', sans-serif; font-weight: bold;"><a style="color: #969292 !important; text-decoration: none !important;" href="http://www.bsllc.biz" target="_blank">WEB</a></span>
+    </div>
+    <hr noshade style="border-color: #f0eee6; width: 80%; margin-top: 2%;">
+    <p style="color: #F0EEE6; text-align: center; font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace; margin-top: 5%; font-size: 11pt;">BS LLC DISCIPLINES</p>
+    <table style="text-align: center; width: 80%; margin-left: 10%;" border="0" cellpadding="0" cellspacing="0" width="600" id="templateColumns">
+      <tr>
+        <td align="" valign="top" width="50%" class="templateColumnContainer">
+          <table border="0" cellpadding="10" cellspacing="0" width="100%">
+            <tr>
+              <td class="leftColumnContent">
+                <span style="display: block; padding-bottom: 10%; color: #F0EEE6; font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace;">Design</span>
+                <span style="display: block; padding-bottom: 10%; color: #F0EEE6; font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace;">Copywriting</span>
+                <span style="display: block; padding-bottom: 10%; color: #F0EEE6; font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace;">Photography</span>
 
-    .email-body {
-      width: 70vw;
-      margin-left: 15vw;
-    }
+              </td>
+            </tr>
+            <tr>
+              <td valign="top" class="leftColumnContent">
+              </td>
+            </tr>
+          </table>
+        </td>
+        <td align="" valign="top" width="50%" class="templateColumnContainer">
+          <table border="0" cellpadding="10" cellspacing="0" width="100%">
+            <tr>
+              <td class="rightColumnContent">
+                <span style="display: block; padding-bottom: 10%; color: #F0EEE6; font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace;">Brand Strategy</span>
+                <span style="display: block; padding-bottom: 10%; color: #F0EEE6; font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace;">Marketing</span>
+                <span style="display: block; padding-bottom: 10%; color: #F0EEE6; font-family: Courier New, lucida sans trypewriter, lucida typewriter, monspace;">Research</span>
+              </td>
+            </tr>
+            <tr>
+              <td valign="top" class="rightColumnContent">
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </div>
+</body>
 
-    section:nth-of-type(2) {
-      background-color: #FFF9F9;
-      text-align: center;
-      padding-top: 5vh;
-      padding-bottom: 3vh;
-    }
-
-    section:nth-of-type(2) .sideways {
-      width: 100vw;
-      position: relative;
-      top: 11.7vh;
-    }
-
-
-    section:nth-of-type(2) span:first-of-type {
-      color: #53A2DA;
-      font-size: 4.4vw;
-    }
-
-    .who-is-text {
-      width: 75vw;
-      font-size: 3.2vw;
-      display: inline-block;
-      margin-top: 9vh;
-    }
-
-    section:nth-of-type(2) .sideways p {
-      color: #D1D0C9;
-      font-size: 3.5vw;
-      position: absolute;
-      margin: 0vh;
-    }
-
-    section:nth-of-type(2) .sideways p:first-of-type {
-      transform: rotate(90deg);
-      left: -6vw;
-    }
-
-    section:nth-of-type(2) .sideways p:nth-of-type(2) {
-      transform: rotate(-90deg);
-      right: -6vw;
-    }
-
-    .accent {
-      padding-top: 6vh;
-      width: 75vw;
-    }
-
-    section:nth-of-type(3) .head {
-      text-align: center;
-      color: #53A2DA;
-      margin-top: 7vh;
-      margin-bottom: 7vh;
-      font-size: 8vw;
-    }
-
-    .work-item {
-      margin-left: 10vw;
-    }
-
-
-    .work-item p:first-of-type {
-    }
-
-    .work-item p:nth-of-type(2) {
-
-    }
-
-    .work-item p:nth-of-type(3), .work-item p:nth-of-type(4) {
-      width: 75vw
-    }
-
-    .work-item a {
-      width: 75vw;
-      display: block;
-      text-align: center;
-      background-color: #3652FF;
-      text-decoration: none;
-      color: #F0EEE6;
-      padding-top: 1vh;
-      padding-bottom: 1vh;
-    }
-
-    footer {
-      background-color: #53A2DA;
-      margin-top: 14vh;
-    }
-
-    footer header {
-      color: #94BBD1;
-      width: 90vw;
-      margin-left: 6.2vw;
-      text-align: center;
-      font-size: 3.5vw;
-      padding-top: 5vh;
-      margin-bottom: 7vh;
-    }
-
-    footer header span {
-      margin-right: 3.8vw;
-    }
-
-    .contacts a {
-      margin-left: 4vw;
-    }
-
-    .contacts a span:last-of-type {
-      display: block;
-      padding-left: 9vw;
-      margin-bottom: 4vh;    }
-
-    .contacts a img {
-      width: 4vw;
-      vertical-align: middle;
-    }
-
-    .contact {
-      width: 18vw;
-      margin-left: 41vw;
-      margin-bottom: 3vh;
-    }
-
-    footer div img:nth-of-type(1) {
-      width: 30vw;
-      margin-left: 4vw;
-      margin-right: 40vw;
-    }
-
-    footer div img:nth-of-type(2) {
-      margin-right: 2vw;
-    }
-
-    .bottom-row {
-      padding-bottom: 2vh;
-    }
-}
-
-    </style>
-
-    <section>
-      <header>
-        <span>BRAND STRATEGY</span>
-        <span>MARKETING</span>
-        <span>COPYWRITING</span>
-        <span>DESIGN</span>
-        <span>PHOTOGRAPHY</span>
-        <span>RESEARCH</span>
-      </header>
-      <img class="logo" src="/bull-icon.svg" alt="Logo">
-      <span class="sideways">
-        <p>BS&ensp;LLC&ensp;|&ensp;2017</p>
-      </span>
-      <div class="email-body">
-        <p>Hi, xxxx,</p>
-        <p>We received your inquiry, so this is just a holdover to say thanks for reaching out. We're not into the belabored formalities of never-ending email exchanges, so if you'd prefer to chat via phone, skype, or face-to-face over coffee, we're happy to set up a time to discuss your brand's challenges. If that's the case, then respond to this email with dates and times that work for you and we will get a meeting on the books.</p>
-        <p>If that's not your thing, we're happy to completely abandon our original statement and email back and forth until we fully understand the nature of your project.</p>
-        <p>Above all, thank you for taking the time to check us out. We look forward to hopefully building something together that creates lasting impact and success.</p>
-        <p>All the best,</p>
-        <p>BS LLC</p>
-      </div>
-    </section>
-
-    <section>
-      <span>but who is BS LLC?</span>
-      <div class="sideways">
-        <p>idea consulting</p>
-        <p>results focused</p>
-      </div>
-      <p class="who-is-text">BS LLC is a creative consultancy focused on branding and marketing. We employ science and art, the cornerstones of effective and beautiful communication, to create meaningful solutions for brands.</p>
-      <img class="accent" src="/tricolor.svg" alt="">
-    </section>
-
-    <section>
-      <p class="head">REQUESTED WORK</p>
-      <div class="work-item">
-        <p>Archive of Thirst</p>
-        <p>Rhinegeist Brewery</p>
-        <p>An award-winning campagin that helped Rhinegeist launch Cidergeist in two new markets. We connected with founders Bob Bonder and Bryant Goulding to distill Rhinegeist's culture into something their sales team could hold in their hands and make people say wow.</p>
-        <a class="download-here" href="#">Download Here</a>
-      </div>
-      <div class="work-item">
-        <p>A Brand Aquatic</p>
-        <p>Eighth &amp; English</p>
-        <p>Chase B. cooked at the best restaurants in his city. He took over flailing kitches and turned them arounds. He quit the industry for five minutes and then came back because he missed the heat.</p>
-        <p>It was time for him to do him. It was time to open his own place. After taking over the lease to a built-out space, Chase asked us to build his brand. Together, we created Eighth &amp; English</p>
-        <a class="download-here" href="#">Download Here</a>
-      </div>
-    </section>
-
-    <footer>
-      <header>
-        <span>BRAND STRATEGY</span>
-        <span>MARKETING</span>
-        <span>COPYWRITING</span>
-        <span>DESIGN</span>
-        <span>PHOTOGRAPHY</span>
-        <span>RESEARCH</span>
-      </header>
-      <span class="contacts">
-        <a>
-          <img src="/phone-icon.svg" alt="Call">
-          <span>CALL</span>
-          <span>513.427.5526</span>
-        </a>
-        <a>
-          <img src="/email-icon.svg" alt="Email">
-          <span>EMAIL</span>
-          <span>info.bsllc.biz</span>
-        </a>
-        <a>
-          <img src="/web-icon.svg" alt="Web">
-          <span>WEB</span>
-          <span>www.bsllc.biz</span>
-        </a>
-      </span>
-      <img class="contact" src="/contact-icon.svg" alt="Contact Logo">
-      <div class="bottom-row">
-        <img src="/pinnacleawardlogo.jpg" alt="Award Logo">
-        <img src="/linkedin-logo.svg" alt="LinkedIN">
-        <img src="/bbb-logo.svg" alt="BBB">
-      </div>
-    </footer>
-  </body>
 </html>
