recipient names append to dashboard page

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
         }
     </style>
 
-    <h1>Dashboard</h1>
+    <h1>Create Assets</h1>
     <form action="index.html" method="post">
       <input class="header" type="text" name="header" value="" placeholder="Header">
       <input class="subhead" type="text" name="subhead" value="" placeholder="Subheading">
@@ -23,5 +23,15 @@
       <input type="text" name="type" value="" placeholder="type">
       <button type="button" name="button">Submit</button>
     </form>
+
+    <h1>List of emails</h1>
+    <div class="list-of-emails">
+      <div>
+        <span>Email</span>
+        <span>First</span>
+        <span>Last</span>
+        <button type="button" name="button">Remove From List</button>
+      </div>
+    </div>
   </body>
 </html>
