--- a/form.html
+++ b/form.html
@@ -7,6 +7,8 @@
   <body>
     <form class="" action="/case-study-request" method="post">
       <input type="text" name="email" value="" placeholder="email goes here...">
+      <input type="text" name="firstName" value="" placeholder="First Name...">
+      <input type="text" name="lastName" value="" placeholder="Last Name...">
       <input type="submit" name="" value="Click">
     </form>
   </body>
