--- a/dashboard.html
+++ b/dashboard.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <title>Dashboard</title>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/js/dashboard.js"></script>
+    <script src='/socket.io/socket.io.js'></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script src='/js/dashboard.js'></script>
   </head>
   <body>
-    <style media="screen">
+    <style media='screen'>
         input, textarea {
           display: block;
         }
@@ -16,19 +16,35 @@
         .list-of-emails div span {
           margin-right: 2vw;
         }
+
+        .manifest span {
+          margin-left: 2vw;
+          margin-right: 1vw;
+        }
+
+        .manifest button {
+          display: block;
+          margin-top: 4vh;
+          margin-left: 2vw;
+        }
+
     </style>
 
     <h1>Create Assets</h1>
-    <form action="index.html" method="post">
-      <input class="header" type="text" name="header" value="" placeholder="Header">
-      <input class="subhead" type="text" name="subhead" value="" placeholder="Subheading">
-      <textarea class="description" name="description" rows="8" cols="80" placeholder="Description"></textarea>
-      <input class="link" type="text" name="link" value="" placeholder="Link to assets">
-      <input type="text" name="type" value="" placeholder="type">
-      <button type="button" name="button">Submit</button>
+    <form action='index.html' method='post'>
+      <input class='header' type='text' name='header' value='' placeholder='Header'>
+      <input class='subhead' type='text' name='subhead' value='' placeholder='Subheading'>
+      <textarea class='description' name='description' rows='8' cols='80' placeholder='Description'></textarea>
+      <input class='link' type='text' name='link' value='' placeholder='Link to assets'>
+      <button type='button' name='button'>Submit</button>
     </form>
 
     <h1>List of emails</h1>
-    <div class="list-of-emails"></div>
+    <div class='list-of-emails'></div>
+
+    <div class='manifest'>
+      <h1>Email Asset Manifest</h1>
+    </div>
+
   </body>
 </html>
